--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <meta property="og:title" content="EllowDigitals | Empowering Digital Transformation for Businesses" />
   <meta property="og:description"
     content="EllowDigitals provides innovative digital transformation solutions like SEO, web development, and digital marketing services to help businesses thrive." />
-  <meta property="og:image" content="https://ellowdigitals.netlify.app/assets/favicon/share.jpg" />
+  <meta property="og:image" content="https://ellowdigitals.netlify.app/favicon/share.jpg" />
   <meta property="og:url" content="https://ellowdigitals.me/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="EllowDigitals" />
@@ -65,9 +65,9 @@
   <meta name="twitter:title" content="EllowDigitals | Empowering Digital Transformation for Businesses" />
   <meta name="twitter:description"
     content="EllowDigitals provides cutting-edge digital transformation services such as SEO, web development, and digital marketing to accelerate your business growth." />
-  <meta name="twitter:image" content="https://ellowdigitals.netlify.app/assets/favicon/share.jpg" />
-  <meta name="twitter:site" content="@YourTwitterHandle" />
-  <meta name="twitter:creator" content="@YourTwitterHandle" />
+  <meta name="twitter:image" content="https://ellowdigitals.netlify.app/favicon/share.jpg" />
+  <meta name="twitter:site" content="@EllowDigitals" />
+  <meta name="twitter:creator" content="@YEllowDigitals" />
 
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="WMhKG8wyqadZSkX0PKIkyv--6CSGCaErWsG6j5pnV-Q" />
